@@ -1,3 +1,11 @@
+2006-12-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* mi-elisp.el: Changes to keep compatibility between a file
+	byte-compiled by Emacs21 and a file byte-compiled by Emacs22.
+	(mode-info-define-button-type): Define when this file is loaded.
+	(mode-info-button-type-get): Ditto.
+	(mode-info-insert-button): Ditto.
+
 2004-11-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* mode-info.el (mode-info-version): Release 0.8.2.
